--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 
 
 
-        <dependency>
+       <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>2.3.1.RELEASE</version>
@@ -108,12 +108,7 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
@@ -134,11 +129,34 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.20</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat7-maven-plugin -->
+      <!-- <dependency>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+           <scope>provided</scope>
+        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat</artifactId>
+            <version>9.0.0.M1</version>
+            <type>pom</type>
+        </dependency>
+
+
     </dependencies>
 
 
     <build>
-        <finalName>Climbing</finalName><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+        <finalName>ClimbingFriends</finalName><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
         <pluginManagement>
         <plugins>
             <plugin>
